added own email

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <ul>
     <li><a href="https://github.com/AjdinHusic" target="_blank" rel="noopener">GitHub</a></li>
     <li><a href="https://www.linkedin.com/in/ajdin-husic-590b9b48/" target="_blank" rel="noopener">LinkedIn</a></li>
-    <li><a href="#ZG9taW5pY0B2b25rLmlv" class="m" target="_blank" rel="noopener">E-mail</a></li>
+    <li><a href="#YWpkaW5AbGl2ZS5ubA==" class="m" target="_blank" rel="noopener">E-mail</a></li>
 </ul>
 
 <script>
