added u-team reference

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 <h2>Projects</h2>
 <ul>
     <li><a href="https://github.com/AjdinHusic/arabic-madinah" target="_blank" rel="noopener">Learn Arabic</a></li>
+    <li><a href="https://u-team.nl" target="_blank" rel="noopener">U-Team Recruitment</a></li>
 </ul>
 <h2>Contact</h2>
 <ul>
