--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
 
     .photo {
-        width: max(20vw, 200px);
+        width: min(20vw, 200px);
         display: inline-block;
     }
 
@@ -33,7 +33,7 @@
             -webkit-filter: invert(100%); /* safari 6.0 - 9.0 */
             filter: invert(100%);
             display: inline-block;
-            width: max(20vw, 200px);
+            width: min(20vw, 200px);
         }
 
         body {
@@ -80,25 +80,66 @@
     a {
         color: #26c799;
     }
+
+    .gallery {
+        display: inline-block;
+    }
+
+    .gallery img {
+        border-radius: 8px;
+        cursor: pointer;
+        width: min(600px, 50vw);
+        margin: auto;
+    }
+
+    .gallery:hover {
+        transform: scale(1.1);
+        transition: transform 0.5s;
+    }
+
+    .gallery  span {
+        display: block;
+        font-size: x-large;
+    }
+
+    @keyframes scroll {
+        0% { transform: translateX(0); }
+        100% { transform: translateX(calc(min(600px, 50vw) * -0.5))}
+    }
+
+    .slider {
+        width: 100vw;
+        animation: scroll 10s linear infinite;
+    }
 </style>
 <img src="ajdin-avatar%20.svg" class="photo">
 <img src="ajdin-avatar%20.svg" class="photo-dark">
 <h1>Ajdin Husic</h1>
 <ul>
-    <li>Unmarried</li>
-    <li>Developer at ProCC</li>
-</ul>
-<h2>Projects</h2>
-<ul>
-    <li><a href="https://github.com/AjdinHusic/arabic-madinah" target="_blank" rel="noopener">Learn Arabic</a></li>
-    <li><a href="https://u-team.nl" target="_blank" rel="noopener">U-Team Recruitment</a></li>
+    <li>Software Developer</li>
 </ul>
 <h2>Contact</h2>
 <ul>
     <li><a href="https://github.com/AjdinHusic" target="_blank" rel="noopener">GitHub</a></li>
     <li><a href="https://www.linkedin.com/in/ajdin-husic-590b9b48/" target="_blank" rel="noopener">LinkedIn</a></li>
-    <li><a href="#YWpkaW5AbGl2ZS5ubA==" class="m" target="_blank" rel="noopener">E-mail</a></li>
+    <li><a href="#YWpkaW4uaHVzaWMuZGV2QGdtYWlsLmNvbQ==" class="m" target="_blank" rel="noopener">E-mail</a></li>
 </ul>
+<h2>Skills</h2>
+<div class="slider">
+    <div class="gallery">
+        <img src="./swagger.png">
+        <span>Api Design</span>
+    </div>
+    <div class="gallery">
+        <img src="./database.png">
+        <span>Database Architecture</span>
+    </div>
+    <div class="gallery">
+        <img src="./ui.png">
+        <span>User Interface</span>
+    </div>
+</div>
+
 
 <script>
     document.querySelector('.m').onclick = function (e) {
